@@ -1,6 +1,9 @@
-status now says "No $0 running" if the pid file is missing.  Bug 83295.
 
-defining gd_preconfig is now optional.  Addresses bug 83086
+Added gd_kill_groups().  Bug 83294.
+
+'status' now says "No $0 running" if the pid file is missing.  Bug 83295.
+
+Defining gd_preconfig is now optional.  Addresses bug 83086
 
 Added gd_reopen_output() to address bug 83087.
 
